# WEB_HW8

hw8/: load.py  models.py  pyproject.toml  search.py
hw8_2/: consumer.py  models.py  producer.py  pyproject.toml
